# QIOToolkit

./: .clang-format  .gitignore  CODE_OF_CONDUCT.html  CONTRIBUTING.html  Dockerfile  LICENSE  README.md  doxygen.config  index.html  index.json  makefile  manifest.json  qiotoolkit.csproj  qiotoolkit.nuspec  toc.html  xrefmap.yml
api/: archiver.html  argp.html  ascii.html  auto-utf.html  auto-utfinput-stream.html  auto-utfoutput-stream.html  base-reader-handler.html  basic-istream-wrapper.html  basic-ostream-wrapper.html  box.html  canvas.html  capitalize-filter.html  circle.html  config.html  counter.html  crt-allocator.html  cursor-stream-wrapper.html  dependent.html  education.html  employee.html  encoded-input-stream.html  encoded-output-stream.html  file-read-stream.html  file-write-stream.html  filter-key-handler.html  filter-key-reader.html  generic-array.html  generic-document.html  generic-insitu-string-stream.html  generic-member-iterator.html  generic-member.html  generic-memory-buffer.html  generic-object.html  generic-pointer.html  generic-reader.html  generic-schema-document.html  generic-schema-validator.html  generic-stream-wrapper.html  generic-string-buffer.html  generic-string-ref.html  (+41 more)
ci/: release_documentation.sh
cpp/: CMakeLists.txt  CMakeSettings.json  README.md  run_tests.sh
cpp/app/: CMakeLists.txt  qiotoolkit.cc  qiotoolkit.i  runner.cc  runner.h
cpp/app/test/: CMakeLists.txt  runner_test.cc
cpp/cmake/: build_types.cmake  git_version.cmake  git_version.h.in  googletest.cmake  pcg.cmake  picojson.cmake  proto.cmake  rapidjson.cmake
cpp/examples/: CMakeLists.txt  descent.cc  descent.h  input-data.ising.json  output.ising.sa.json  params.sa.json  run.ising.sa.sh  soft_spin.cc  soft_spin.h
cpp/examples/test/: CMakeLists.txt  descent_test.cc  soft_spin_test.cc
cpp/graph/: CMakeLists.txt  README.md  cost_edge.cc  cost_edge.h  edge.cc  edge.h  face.h  faced_graph.h  graph.h  graph_compact.h  graph_properties.h  node.cc  node.h  properties.cc  properties.h
cpp/graph/test/: CMakeLists.txt  cost_edge_test.cc  edge_test.cc  face_test.cc  graph_compact_test.cc  graph_test.cc  node_test.cc  properties_test.cc
cpp/markov/: CMakeLists.txt  cluster_walker.h  hill_climbing_walker.h  markov.cc  metropolis.h  model.h  quantum_walker.h  random_walker.h  state.h  tabu_walker.h  transition.h  walker.h
cpp/markov/test/: CMakeLists.txt  metropolis_test.cc  model_test.cc  state_test.cc  transition_test.cc
cpp/matcher/: CMakeLists.txt  all-of.h  any-of.h  any.h  each.h  equal-to.h  greater-equal.h  greater-than.h  is-empty.h  is-sorted.h  less-equal.h  less-than.h  matchers.h  none-of.h  not.h  size-is.h
cpp/matcher/test/: CMakeLists.txt  matchers_test.cc
cpp/model/: CMakeLists.txt  README.md  all_models.h  base_model.cc  base_model.h  blume_capel.cc  blume_capel.h  clock.cc  clock.h  graph_compact_model.h  graph_model.h  ising.cc  ising.h  ising_grouped.cc  ising_grouped.h  max_sat.h  model_registry.h  partition.cc  partition.h  permutation.cc  permutation.h  poly.cc  poly.h  potts.cc  potts.h  pubo.cc  pubo.h  pubo_adaptive.h  pubo_grouped.h  terms.cc  terms.h  tsp.cc  tsp.h
cpp/model/test/: CMakeLists.txt  clock_test.cc  ising_grouped_test.cc  ising_term_cached_test.cc  ising_test.cc  max_sat_test.cc  model_registry_test.cc  partition_test.cc  permutation_test.cc  poly_test.cc  pubo_adaptive_test.cc  pubo_grouped_test.cc  pubo_test.cc  pubo_with_counter_test.cc  test_utils.h
cpp/observe/: CMakeLists.txt  observable.cc  observable.h  observer.cc  observer.h
cpp/observe/test/: CMakeLists.txt  observable_test.cc
cpp/schedule/: CMakeLists.txt  constant.cc  constant.h  geometric.cc  geometric.h  linear.cc  linear.h  ranged_generator.cc  ranged_generator.h  schedule.cc  schedule.h  schedule_generator.cc  schedule_generator.h  segments.cc  segments.h
cpp/schedule/test/: CMakeLists.txt  constant_test.cc  geometric_test.cc  linear_test.cc  schedule_test.cc  segments_test.cc
cpp/solver/: CMakeLists.txt  README.md  all_solvers.h  estimator.h  evaluation_counter.cc  evaluation_counter.h  model_solver.h  murex.h  pa_parameter_free.h  parallel_tempering.h  parameter_free_adapter.h  parameter_free_linear_solver.h  parameter_free_solver.h  population.h  population_annealing.h  pt_parameter_free.h  quantum_monte_carlo.h  sa_parameter_free.h  simulated_annealing.cc  simulated_annealing.h  solver.h  solver_registry.h  ssmc_parameter_free.h  stepping_solver.h  substochastic_monte_carlo.h  tabu.h  tabu_parameter_free.h
cpp/solver/test/: CMakeLists.txt  estimator_test.cc  pa_pf_test.cc  parallel_tempering_test.cc  population_annealing_test.cc  population_test.cc  pt_pf_test.cc  quantum_monte_carlo_test.cc  sa_pf_test.cc  simulated_annealing_test.cc  solver_registry_test.cc  ssmc_pf_test.cc  substochastic_monte_carlo_test.cc  tabu_pf_test.cc  tabu_test.cc  test_model.cc  test_model.h  test_utils.h
cpp/strategy/: CMakeLists.txt  base_opt.cc  base_opt.h  bayesian.cc  bayesian.h  gd_parameters.cc  gd_parameters.h  linear_search.cc  linear_search.h
cpp/strategy/test/: CMakeLists.txt  bayesian_test.cc  gd_parameters_test.cc  linear_search_test.cc
cpp/utils/: CMakeLists.txt  README.md  arguments.cc  arguments.h  bit_stream.cc  bit_stream.h  component.cc  component.h  concat.h  config.cc  config.h  dimacs.cc  dimacs.h  error_handling.h  exception.cc  exception.h  file.cc  file.h  json.cc  json.h  language.cc  language.h  log.cc  log.h  metadata.cc  metadata.h  operating_system.cc  operating_system.h  optional.h  parameter_builder.h  problem.proto  proto_reader.h  qio_signal.cc  qio_signal.h  random_generator.cc  random_generator.h  random_selector.cc  random_selector.h  range.cc  range.h  (+12 more)
cpp/utils/test/: CMakeLists.txt  bit_stream_test.cc  component_test.cc  config_test.cc  dimacs_test.cc  exception_test.cc  json_test.cc  language_test.cc  log_test.cc  optional_test.cc  parameter_test.cc  random_generator_test.cc  random_selector_test.cc  stream_proto_test.cc  stream_test.cc  stream_test.h  structure_test.cc  utils_test.cc
data/: constisinggrouped.json  (+19 more)
(+1348 files in other folders)
